k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingerss.class: nginx
    nginx.ingress.kubernetes.io/rewrite-targer: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - k8s-multi.com
        - www.k8s-multi.com
      secretName: k8s-multi-com
  rules:
    - host: k8s-multi.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: '/api/'
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    - host: www.k8s-multi.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: '/api/'
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
